objects/Ant__c.object
<CustomObject>
    <label>Ant</label>
    <nameField>
        <label>Ant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Billing_Street__c &amp; &apos;,&apos;&amp; Billing_City__c &amp; &apos;,&apos; &amp; Billing_State__c &amp; &apos;,&apos; &amp; Billing_Country__c  &amp; &apos;,&apos; &amp; Billing_Pincode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Pincode__c</fullName>
        <label>Billing Pincode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
</CustomObject>